--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   google_fonts: 2.1.0
   tmdb_api: 2.0.0-nullsafety
+  http: ^0.13.4
 
 
   # The following adds the Cupertino Icons font to your application.
