--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   google_fonts: 2.1.0
   tmdb_api: 2.0.0-nullsafety
   http: ^0.13.4
+  hive: ^2.0.4
+  hive_flutter: ^1.1.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -35,6 +38,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator: ^1.1.1
+  build_runner: ^2.1.4
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
